<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/icmem">
    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarRegister"
        />
    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YENİ HESAP OLUŞTUR"
        android:layout_below="@+id/actionbarRegister"
        android:layout_marginTop="140dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/txtInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo1"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo2"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/black"
        android:layout_marginBottom="100dp"
        android:textColor="@android:color/white"/>
</RelativeLayout>