<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/icmem">
    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarLogin"/>
    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HESABINIZLA GİRİŞ YAPINIZ"
        android:layout_below="@+id/actionbarLogin"
        android:layout_marginTop="180dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/txtInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hesap Bilgilerinizi Giriniz"
        android:layout_below="@id/txtInfo1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo2"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmailLogin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="110dp"
        android:background="@android:color/black"
        android:text="@string/login"
        android:textColor="@android:color/white" />
</RelativeLayout>